--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
+remote_theme             : "mmistakes/minimal-mistakes"
 locale                   : "en-US"
 title                    : "Site Title"
 title_separator          : "-"
