--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ locale                   : "en-US"
 title                    : "Filipe's Website"
 title_separator          : "-"
 name                     : "Filipe Teixeira"
-description              : "An amazing website."
-url                      : https://filipeamteixeira.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : ""
+url                      : #https://filipeamteixeira.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
