--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 remote_theme             : "mmistakes/minimal-mistakes"
 locale                   : "en-US"
-title                    : "Filipe's Website"
+title                    : "Filipe Website"
 title_separator          : "-"
 name                     : "Filipe Teixeira"
 description              : ""
-url                      : #https://filipeamteixeira.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://filipeamteixeira.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
