--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ analytics:
 # Site Author
 author:
   name             : "Filipe Teixeira"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/avatar.jpg"
   bio              : "Mathematician, Architect, Neuroscientist, Pianist, professional complainer."
   location         : "Ghent, Belgium"
   email            :
@@ -104,7 +104,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : "https://github.com/FilipeamTeixeira"
   gitlab           :
   google_plus      :
   keybase          :
