--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,8 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+docs:
+  - title: About
+    children:
+      - title: "About"
+        url: /about/
