--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 remote_theme             : "mmistakes/minimal-mistakes"
 locale                   : "en-US"
-title                    : "Filipe Website"
+title                    : "Lost in Statistics"
 title_separator          : "-"
 name                     : "Filipe Teixeira"
 description              : ""
