--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,3 +15,15 @@ docs:
     children:
       - title: "Authors"
         url: /docs/authors/
+  
+  - title: Getting Started
+    children:
+      - title: "Quick-Start Guide"
+        url: /docs/quick-start-guide/
+      - title: "Structure"
+        url: /docs/structure/
+      - title: "Installation"
+        url: /docs/installation/
+      - title: "Upgrading"
+        url: /docs/upgrading/
+
