--- a/_config.yml
+++ b/_config.yml
@@ -251,7 +251,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
@@ -261,16 +261,14 @@ defaults:
       share: true
       related: true
    # _docs
-  - scope:
-      path: ""
+   - scope:
+      path: "_docs"
       type: docs
     values:
       layout: single
-      sidebar:
-        nav: "docs"
    # _pages
-  - scope:
-      path: ""
+   - scope:
+      path: "_pages"
       type: pages
     values:
       layout: single
