--- a/_config.yml
+++ b/_config.yml
@@ -251,7 +251,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: "_posts"
+      path: ""
       type: posts
     values:
       layout: single
@@ -268,7 +268,7 @@ defaults:
       layout: single
    # _pages
    - scope:
-      path: "_pages"
+      path: ""
       type: pages
     values:
       layout: single
